fix menu alignment and add more items

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -12,7 +12,11 @@
   width: 1400px;
   height: 100%;
   background-color: #FFFFFF;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+  "nav-left" "logo" "nav-right";
   align-items: center;
   justify-content: center;
 }
