--- a/src/Header/Logo/Logo.css
+++ b/src/Header/Logo/Logo.css
@@ -4,7 +4,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100px;
+  grid-area: "logo";
 }
 
 .Logo img {
